--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
         "start": "cross-env NODE_ENV=production node app",
         "dev": "cross-env NODE_ENV=development nodemon app"
     },
+    "engines": {
+        "node": "12.18.3"
+    },
     "author": "Muhammad MUdassir Siddiqui",
     "license": "MIT",
     "dependencies": {
