--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "app to create public and privite stories",
     "main": "app.js",
     "scripts": {
-        "start": "node app",
+        "start": "cross-env NODE_ENV=production node app",
         "dev": "cross-env NODE_ENV=development nodemon app"
     },
     "engines": {
